--- a/Projects/jd/templates/index.html
+++ b/Projects/jd/templates/index.html
@@ -57,7 +57,6 @@
 		</div>                
 		<div id="J-toolbar-load-hook" clstag="h|keycount|cebianlan_h|load"></div>            
 	</div>
-		<!-----------------------------------------顶部-------------->
 		<header id="header">
 			<div class="header-box">
 				<ul class="header-left">
@@ -72,7 +71,7 @@
 					</li>					
 				</ul>
 				<ul class="header-right">
-					<li class="denglu"><a href="#">您好，请登录</a> <a href="#"  class="red">免费注册</a></li> 
+					<li class="denglu"><a href="http://127.0.0.1:8001/login/">您好，请登录</a> <a href="http://127.0.0.1:8001/register/"  class="red">免费注册</a></li>
 					<li class="shu"></li>
 					<li class="denglu"><a href="#">我的订单</a></li>
 					<li class="shu"></li>
