--- a/Projects/jd/templates/register.html
+++ b/Projects/jd/templates/register.html
@@ -138,34 +138,34 @@
 	<div class="line"></div>
 	<div class="pg-body">
 		<div class="body-inner">
-			<form id="form1" action="register.html" method="POST">
+			<form id="form1" method="POST">
 				<div class="inp" style="margin-top: 70px; position: relative;">
 					<label style="letter-spacing:5px">用 户 名</label>
-					<input id="i1" type="text" name="user_name" onfocus="Focus_1('#i1');" onblur="Blur_1('#i1');" />
+					<input id="i1" type="text" name="user_name" placeholder="您的帐户名和登录名" onfocus="Focus_1('#i1');" onblur="Blur_1('#i1');" />
 					<img class="check_image display_no" src="/static/images/reg_check.png">
 				</div>
 				<div id='t1' class="inp-tips"></div>
 				<div class="inp">
 					<label>设 置 密 码</label>
-					<input id="i2" type="password" name="user_pwd" onfocus="Focus_2('#i2');" onblur="Blur_2('#i2');" />
+					<input id="i2" type="password" name="user_pwd" placeholder="建议至少使用2种字符" onfocus="Focus_2('#i2');" onblur="Blur_2('#i2');" />
 					<img class="check_image display_no" src="/static/images/reg_check.png">
 				</div>
 				<div id='t2' class="inp-tips"></div>
 				<div class="inp">
 					<label>确 认 密 码</label>
-					<input id="i3" type="password" name="confirm_pwd" onfocus="Focus_3('#i3');" onblur="Blur_3('#i3');"/>
+					<input id="i3" type="password" name="confirm_pwd" placeholder="请再次确认密码" onfocus="Focus_3('#i3');" onblur="Blur_3('#i3');"/>
 					<img class="check_image display_no" src="/static/images/reg_check.png">
 				</div>
 				<div id="t3" class="inp-tips"></div>
 				<div class="inp">
 					<label>手 机 号 码</label>
-					<input id="i4" type="text" name="user_phone" onfocus="Focus_4('#i4');" onblur="Blur_4('#i4');"/>
+					<input id="i4" type="text" name="user_phone" placeholder="请输入手机号" onfocus="Focus_4('#i4');" onblur="Blur_4('#i4');"/>
 					<img class="check_image display_no" src="/static/images/reg_check.png">
 				</div>
 				<div id="t4" class="inp-tips"></div>
 				<div class="inp">
 					<label>密 保 邮 箱</label>
-					<input type="text" name="user_email"/>
+					<input type="text" name="user_email" placeholder="密码邮箱可选 方便找回密码"/>
 				</div>
 				<div class="inp-tips"></div>
 				<input type="checkbox" style="position: absolute; margin-left: 200px;"/>
