--- a/Projects/jd/templates/test.html
+++ b/Projects/jd/templates/test.html
@@ -2,13 +2,18 @@
 <html>
 <head>
 	<title></title>
+    <style>
+        body {
+            color: #;
+        }
+    </style>
 </head>
 <body>
 	<form>
 	  <label for="male">Male</label>
 	  <input type="radio" name="sex" id="male" />
 	  <br />
-	  <label for="female">Female</label>
+	  <label for="female">Female &nbsp;</label>
 	  <input type="radio" name="sex" id="female" />
 	</form>
 </body>
