--- a/Projects/jd/templates/index.html
+++ b/Projects/jd/templates/index.html
@@ -320,7 +320,7 @@
 				<i class="gw-left" style="background:url(/static/images/jd2015img.png)0 -58px no-repeat;width:24px;height:24px;"></i>
 				<i class="gw-right">></i>
 				<i class="gw-count">0</i>
-				<a href="#">我的购物车</a>
+				<a href="http://127.0.0.1:8001/car/">我的购物车</a>
 				<div class="dorpdown-layer">
 					<img src="/static/images/settleup-nogoods.png">
 					购物车中还没有商品，赶紧选购吧！
