--- a/Projects/HostManager/templates/login.html
+++ b/Projects/HostManager/templates/login.html
@@ -44,7 +44,7 @@
                     <input type="password" id="p" name="pwd1" class="inputstyle"/>
                 </div>
                 </div>
-               
+                <div id="err"></div>
                 <div style="padding-left:50px;margin-top:20px;"><input type="button" id="logi" value="登 录" style="width:150px;" class="button_blue" /></div>
               </form>
            </div>
