--- a/Projects/HostManager/templates/hosts.html
+++ b/Projects/HostManager/templates/hosts.html
@@ -15,6 +15,8 @@
 {#	        <button type="button" class="btn btn-info" style="background-color: #d58512; border-color: #d58512">添加主机</button>#}
 
             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo">添加主机</button>
+
+            <!--添加主机模态对话框-->
             <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
               <div class="modal-dialog" role="document">
                 <div class="modal-content">
@@ -34,11 +36,23 @@
                       </div>
                       <div class="form-group">
                         <label for="recipient-name" class="control-label">3.业务</label>
-                        <input type="text" class="form-control" id="recipient-name3">
+                        <br>
+{#                        <input type="text" class="form-control" id="recipient-name3">#}
+                          <select class="selectpicker">
+                              {% for item in business_list %}
+                              <option id="recipient-name3" value={{ item.id }}>{{ item.name }}</option>
+                              {% endfor %}
+                          </select>
                       </div>
                       <div class="form-group">
                         <label for="recipient-name" class="control-label">4.状态</label>
-                        <input type="text" class="form-control" id="recipient-name4">
+                          <br>
+{#                        <input type="text" class="form-control" id="recipient-name4">#}
+                            <select class="selectpicker">
+                              {% for item in status_list %}
+                              <option id="recipient-name4" value={{ item.id }}>{{ item.status }}</option>
+                              {% endfor %}
+                            </select>
                       </div>
                                               <div class="form-group">
                         <label for="recipient-name" class="control-label">5.idc机房</label>
@@ -66,6 +80,71 @@
               </div>
             </div>
 
+            <!--编辑主机模态对话框-->
+            <div class="modal fade" id="exampleModal_02" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+              <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="exampleModalLabel_02">编辑主机</h4>
+                  </div>
+                  <form id="form1">
+                  <div class="modal-body">
+                      <div class="form-group">
+                        <label for="recipient-name" class="control-label">1.主机名</label>
+                        <input type="text" class="form-control" id="recipient-name11">
+                      </div>
+                      <div class="form-group">
+                        <label for="recipient-name" class="control-label">2.IP</label>
+                        <input type="text" class="form-control" id="recipient-name12">
+                      </div>
+                      <div class="form-group">
+                        <label for="recipient-name" class="control-label">3.业务</label>
+                        <br>
+{#                        <input type="text" class="form-control" id="recipient-name3">#}
+                          <select class="selectpicker">
+                              {% for item in business_list %}
+                              <option id="recipient-name3" value={{ item.id }}>{{ item.name }}</option>
+                              {% endfor %}
+                          </select>
+                      </div>
+                      <div class="form-group">
+                        <label for="recipient-name" class="control-label">4.状态</label>
+                          <br>
+{#                        <input type="text" class="form-control" id="recipient-name4">#}
+                            <select id="recipient-name14" class="selectpicker">
+                              {% for item in status_list %}
+                              <option value={{ item.id }}>{{ item.status }}</option>
+                              {% endfor %}
+                            </select>
+                      </div>
+                                              <div class="form-group">
+                        <label for="recipient-name" class="control-label">5.idc机房</label>
+                        <input type="text" class="form-control" id="recipient-name15">
+                      </div>
+                                              <div class="form-group">
+                        <label for="recipient-name" class="control-label">6.机柜</label>
+                        <input type="text" class="form-control" id="recipient-name16">
+                      </div>
+                                              <div class="form-group">
+                        <label for="recipient-name" class="control-label">7.负责人</label>
+                        <input type="text" class="form-control" id="recipient-name17">
+                      </div>
+                                              <div class="form-group">
+                        <label for="recipient-name" class="control-label">8.上线时间</label>
+                        <input type="text" class="form-control" id="recipient-name18">
+                      </div>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                    <button id="save" type="button" class="btn btn-primary">保存</button>
+                  </div>
+                </form>
+                </div>
+              </div>
+            </div>
+
+
             <table class="table table-bordered" id="tb">
                 <tr>
                     <td>编号</td>
@@ -85,11 +164,11 @@
                     </td>
                     <td>{{ item.name }}</td>
                     <td>{{ item.ip }}</td>
-                    <td>{{ item.business }}</td>
-                    <td>{{ item.status }}</td>
-                    <td><a href="#">编辑</a> |
+                    <td>{{ item.business.name }}</td>
+                    <td>{{ item.status.status }}</td>
+                    <td><a id="edit" href="#">编辑</a> |
                         <a href="/delete_host/?nid={{ item.id }}">删除</a>  |
-                        <a href="/details/?nid={{ item.id }}">详细信息</a>
+                        <a href="/details-{{ item.id }}.html/">详细信息</a>
                     </td>
                 </tr>
         {% endfor %}
@@ -98,23 +177,77 @@
     {% endblock %}
     {% block js %}
         <script src="/static/js/edit_row.js"></script>
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.2/css/bootstrap-select.min.css">
+
+        <!-- Latest compiled and minified JavaScript -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.2/js/bootstrap-select.min.js"></script>
+
+        <!-- (Optional) Latest compiled and minified JavaScript translation files -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.2/js/i18n/defaults-*.min.js"></script>
+
         <script>
             $(function () {
                 $('#save').click(function () {
                     $.ajax({
                         url: '/hosts/',
                         type: 'POST',
-                        data: {'name': $('#recipient-name1').val(), 'ip': $('#recipient-name2').val(),
+                        data: {
+                            'name': $('#recipient-name1').val(), 'ip': $('#recipient-name2').val(),
                             'business': $('#recipient-name3').val(), 'status': $('#recipient-name4').val(),
                             'idc_name': $('#recipient-name5').val(), 'idc_cabinet': $('#recipient-name6').val(),
-                            'person': $('#recipient-name7').val(), 'ctime': $('#recipient-name8').val(),},
+                            'person': $('#recipient-name7').val(), 'ctime': $('#recipient-name8').val(),
+                        },
                         dataType: 'JSON',
                         success: function (data_dict) {
-                            if(data_dict){
+                            if (data_dict) {
                                 location.href = '/hosts/';
                             }
                         }
                     })
+                });
+                $('#edit').click(function () {
+{#                    alert(window.location.href);#}
+                    var data_show = {};
+                    $.ajax({
+                        url: '/details-6.html/',
+                        type: 'POST',
+                        data: {'name': '1'},
+                        dataType: 'JSON',
+                        success: function (data_dict) {
+                            if(data_dict.name){
+{#                                location.href = '/details-6.html/';#}
+                                data_show.name = data_dict.name;
+                                data_show.ip = data_dict.ip;
+                                data_show.business = data_dict.business_id;
+                                data_show.status = data_dict.status_id;
+                                data_show.idc_name = data_dict.idc_name;
+                                data_show.idc_cabinet = data_dict.idc_cabinet;
+                                data_show.person = data_dict.person;
+{#                                data_show.ctime = data_dict.ctime;#}
+                                $("#exampleModal_02").modal();
+                                $('#recipient-name11').val(data_show.name);
+                                $('#recipient-name12').val(data_show.ip);
+                                $('#recipient-name13').val(data_show.business);
+{#                                $('#recipient-name14').val(data_show.status);#}
+                                $('#recipient-name14').children().each(function () {
+                                    var v = $(this).attr('value');
+                                    alert(v);
+                                    if(v==data_show.status){
+                                        alert(999);
+{#                                        $(this).attr('selected', 'selected');#}
+                                        $('#recipient-name14').selectpicker('val', data_show.status);
+                                    }
+                                })
+                                $('#recipient-name15').val(data_show.idc_name);
+                                $('#recipient-name16').val(data_show.idc_cabinet);
+                                $('#recipient-name17').val(data_show.person);
+{#                                $('#recipient-name18').val(data_show.ctime);#}
+                            }
+                            else{alert(222)}
+                        }
+                    });
+
                 })
             })
         </script>
