--- a/Projects/HostManager/templates/home.html
+++ b/Projects/HostManager/templates/home.html
@@ -54,6 +54,7 @@
         }
     </style>
     <link rel="stylesheet" href="/static/css/bootstrap.css">
+    <link rel="stylesheet" href="/static/css/bootstrap-select.css">
 </head>
 <body class="body">
     <div class="pg-header">
